[tool.poetry]
name = "rsv"
version = "1.5.0"
description = "A module for reading and writing an RSV document file."
authors = ["Romanin <semina054@gmail.com>"]
repository = "https://github.com/romanin-rf/rsv"
license = "MIT"
readme = "README.md"
keywords = ["rsv", "csv", "io", "file", "format", "dump", "load", "read", "write"]
classifiers = [
    "Operating System :: OS Independent"
]

[tool.poetry.dependencies]
python = ">=3.8"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
