[tool.poetry]
name = "rsv"
version = "1.5.1"
description = "A module for reading and writing an RSV document file."
authors = ["Romanin <semina054@gmail.com>"]
repository = "https://github.com/romanin-rf/rsv"
license = "MIT"
readme = "README.md"
keywords = ["rsv", "csv", "io", "file", "format", "dump", "load", "read", "write"]
classifiers = [
    "Operating System :: OS Independent"
]

[tool.poetry.dependencies]
python = ">=3.8"


[tool.poetry.dev-dependencies]
setuptools = "*"
faker = "*"
mypy = "*"

# Can't use poetry and mypyc together
#[build-system]
#requires = ["poetry>=0.12"]
## build-backend = "poetry.masonry.api"

[build-system]
requires = [
    "setuptools >= 40.6.2",
    "wheel >= 0.30.0",
    "mypy >= 1.7.1",
]
build-backend = "setuptools.build_meta"

[mypy]
warn_return_any = true
warn_unused_configs = true
strict = true